	[BZ #5753] 	* sysdeps/mips/ieee754.h: Use protected namespace 	__BIG_ENDIAN/__LITTLE_ENDIAN. 	Patch by Aurelien Jarno <aurelien@aurel32.net>.